--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@ body {
 	background-color: black;
 	color: white;
 	text-align: center;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 2em;
 	line-height: 1.5em;
 }
